[Changes 1.2c01]

* Improve argument-handling in /hostname command - now supports doing
  /hostname 2 to switch to second vhost.

* Change the display of server stats so that the averages (eg. users per
  channel) are correctly rounded. (caf)

* Reinstate RPL_WHOISACTUALLY numeric - things seem to have stabilised in
  the ircd world on this. (caf)

* Fixed two cases where the client was incorrectly deciding that a numeric
  originated from a remote server rather than the local server - this caused
  BitchX to falsely report channel desynch and incorrectly hide some
  numerics. (caf)

* Fixed $servernum() scripting function, it was returning the wrong server
  reference in most cases. (caf)

* [1.1s01] Fixed .cmsg crash reported by zimzum. (caf)

* Changed the defaults for JOIN_NEW_WINDOW_TYPE and QUERY_NEW_WINDOW_TYPE
  so that they work out of the box. (caf)

* Some cleanups in quit message handling, fixed a bug where a quit from an
  unexpected source could crash the client. (caf)

* Cleaned up the handling of channel mode changes a little, including fixing
  buggy handling of certain key and limit mode changes. (caf)

* Fix bug where you got disconnected if the server sent a 464 numeric
  (bad password) that the client wasn't expecting. (caf)

* Add /HOP and /DEHOP commands for halfop. (caf)

* Removed "scan" plugin, this functionality is now covered by /SCAN -stat.
  (caf)

* Change NICKSORT_OP to NICKSORT_STAT (sorts nicks by channel status - 
  chanop first, then halops, voices and others).  Added /SCAN -stat
  to sort nicks using NICKSORT_OP.  Removed NICKSORT_VOICE - it was broken
  anyway. (caf)

* Add halfop nick prefix to default status line, and change the voice prefix
  so it appears whether or not you're opped. (caf)

* Add halfop support to $channel() scripting function. (caf)

* Rework /SCAN and /NAMES formatting.  This removes the /FSETs NAMES_BOTCOLOR,
  NAMES_FRIENDCOLOR, NAMES_NICKCOLOR, NAMES_OPCOLOR, NAMES_SHITCOLOR and