@@ -1,7 +1,10 @@
 [Changes 1.2c01]
 
+* Fix a refcounting issue in the whowas list handling, which should make
+  the listing of users that left in a netsplit right again. (caf)
+
 * Improve argument-handling in /hostname command - now supports doing
-  /hostname 2 to switch to second vhost.
+  /hostname 2 to switch to second vhost. (caf)
 
 * Change the display of server stats so that the averages (eg. users per
   channel) are correctly rounded. (caf)
